# rust-ai-code-builder

./: Cargo.toml  README.md
schemas/: api_schema.json
src/: main.rs
src/apis/: call_request.rs
src/helpers/: command_line.rs  general.rs
src/models/agent_basic/: basic_agent.rs  basic_traits.rs
src/models/agents/: agent_architect.rs  agent_backend.rs  mod.rs  traits.rs
src/models/agents_manager/: managing_agent.rs
