[package]
name = "auto_gippity"
version = "0.1.0"
edition = "2024"

[dependencies]
ai_functions = "0.1.1"
async-trait = "0.1.68"
crossterm = "0.26.1"
dotenv = "0.15.0"
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = { version = "1.28.0", features = ["full"] }
webbrowser = "0.8.9"
